# graphsat

./: .coverage  .coveragerc  .envrc  .gitignore  README  README.org  __init__.py  __main__.py  cnf.py  cnf_simplify.py  config.py  graph.py  graph_as_tree.py  graph_collapse.py  graph_rewrite.py  justfile  makefile  mhgraph.py  morphism.py  mypy.ini  operations.py  prop.py  pyproject.toml  pytest.ini  reduce_by_rules.py  requirements.txt  requirements_conda.txt  sat.py  setup.py  sxpr.py  todos.org  typing_info.org
benchmarking/: benchmarking.ipynb
graphsat/: __init__.py  cnf.py  cnf_simplify.py  graph.py  graph_collapse.py  graph_rewrite.py  mhgraph.py  morphism.py  operations.py  prop.py  sat.py  sxpr.py  translation.py
literate_docs/: .gitignore  cnf.org  cnf.out  cnf.py  cnf.tex  header.tex  lisp_code.el  makefile  mypy.ini  pytest.ini
literate_docs/tests/: test_cnf.py
sio2/: README  __main__.py  combine_criminals.py  config.py  criminals.py  dat_management.py  draw_hypergraph.py  graph_as_tree.py  hyperbolic_guess.py  mailing.py  make.py  makefile  readable_criminals.py  reduce_by_rules.py  suspects.sage  test_hyperbolic_guess.py
stubs/: anytree.pyi  multipledispatch.pyi  pysat.solvers.pyi
test/: __init__.py  test_cnf.py  test_cnf_simplify.py  test_graph.py  test_graph_rewrite.py  test_mhgraph.py  test_morphism.py  test_operations.py  test_prop.py  test_sat.py  test_sxpr.py  test_unsat.py
tests/: context.py  pytest.ini  test_cnf.py  test_cnf_simplify.py  test_graph.py  test_graph_collapse.py  test_graph_rewrite.py  test_mhgraph.py  test_morphism.py  test_operations.py  test_prop.py  test_sat.py  test_sxpr.py  test_translation.py
