[project]
name = "graphsat"
version = "0.1"
description = "A python package for working with Graphs and Satisfiability"
authors = [
    {name="Vaibhav Karve", email="vkarve@pm.me"},
    {name="Anil N. Hirari", email="hirani@illinois.edu"}
]
requires-python = ">=3.10"
license = {text = "GNU GPLv3"}
keywords = ["graph", "hypergraph", "multigraph", "typed"]
classifiers=[
	'Development Status :: 4 - Beta',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
        'Natural Language :: English',
        'Operating System :: OS Independent',
        'Programming Language :: Python :: 3.10',
        'Topic :: Scientific/Engineering :: Mathematics',
        'Typing :: Typed'
        ]

# Requirements
dependencies = [
    "anytree",
    "attrs",
    "colorama",
    "jupyterlab",
    "loguru",
    "more-itertools",
    "mypy",
    "python-sat[pblib,aiger]",
    "tabulate",
    "tqdm",
    "typer",
]
[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = [
    "autoflake",
    "coverage",
    "hypothesis",
    "isort",
    "pdbpp",
    "pytest",
    "pytest-cov",
    "pytest-parallel",
    "pycodestyle",
    "pydocstyle",
    "pylint",
    "safety",
]

[build-system]
requires = [
    "setuptools",
    "wheel",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    "literate_docs",
    "sio2"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = true
disallow_untyped_defs = true
files = [
    "stubs/",
    "graphsat/",
    "tests/",
]
